--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
 name: Terraform Deploy
 
 on:
-  # push:
-  #   branches: [ main ]
-  workflow_dispatch:   # ✅ Manual trigger only
+  push:
+    branches: [ main ]
+  # workflow_dispatch:   # ✅ Manual trigger only
 
 
 jobs:
@@ -31,5 +31,5 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve tfplan
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
